examples/traffic-shaping/gateway.yaml
---

apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: mygateway
spec:
  gatewayClassName: bigip
  listeners:
    - name: http
      port: 80
      protocol: HTTP
  addresses:
    - value: 10.250.17.143
