examples/traffic-shaping/hrs-filters-extensionref.yaml

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: test-filter-extensionref
spec:
  parentRefs:
    - name: mygateway
      sectionName: http
  hostnames:
    - gateway.api
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: ""
            kind: Service
            name: test-service
