examples/traffic-shaping/hrs-filters-header.yaml

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: test-filter-header
spec:
  parentRefs:
    - name: mygateway
      sectionName: http
  hostnames:
    - gateway.api
  rules:
    - filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            add:
              - name: test
                value: automation
            set:
              - name: dev
                value: agile
      backendRefs:
        - name: test-service
          port: 80
