examples/traffic-shaping/hrs-filters-request-redirect.yaml

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: test-filter-requestredirect
spec:
  parentRefs:
    - name: mygateway
      sectionName: http
  hostnames:
    - gateway.api
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            hostname: www.example.com
            # path: 
            #   type: ReplaceFullPath
            #   replaceFullPath: /fake
            port: 443
            statusCode: 301
      backendRefs:
        - name: test-service
          port: 80
