examples/traffic-shaping/hrs-matches-method.yaml

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: test-match-method
spec:
  parentRefs:
    - name: mygateway
      sectionName: http
  hostnames:
    - gateway.api
  rules:
    - matches:
        - method: GET
        - method: OPTIONS
      backendRefs:
        - name: test-service
          port: 80
