examples/traffic-shaping/hrs-matches-mix.yaml

---

apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: test-multiple-rules
spec:
  parentRefs:
    - name: mygateway
      sectionName: http
  hostnames:
    - gateway.api
  rules:
    - matches:
        - method: GET
        - method: OPTIONS
      backendRefs:
        - name: test-service
          port: 80
    - matches:
      - queryParams:
        - name: test
          value: automation
      - path:
          type: PathPrefix
          value: /path-test
      backendRefs:
        - name: test-service
          port: 80
