examples/traffic-shaping/hrs-matches-path.yaml

---

apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: test-match-path
spec:
  parentRefs:
    - name: mygateway
      sectionName: http
  hostnames:
    - gateway.api
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /path-test
      backendRefs:
        - name: test-service
          port: 80
