examples/traffic-shaping/hrs-matches-query.yaml

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: test-query-params
spec:
  parentRefs:
    - name: mygateway
      sectionName: http
  hostnames:
    - gateway.api
  rules:
    - matches:
      - queryParams:
        - name: test
          value: automation
      backendRefs:
      - name: test-service
        port: 80
